kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-webapp
  namespace: wiz-exercise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiz-webapp
  template:
    metadata:
      labels:
        app: wiz-webapp
    spec:
      serviceAccountName: wiz-webapp
      containers:
        - name: webapp
          image: 309509180673.dkr.ecr.ap-southeast-2.amazonaws.com/wiz-now-webapp:v1
          ports:
            - containerPort: 3000
