kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiz-webapp
  namespace: wiz-exercise
spec:
  selector:
    app: wiz-webapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
